# pumice

./: Cargo.toml  README.md  about.toml  license.py
.github/: dependabot.yml
.github/workflows/: build.yml  develop.yml  master.yml
channel/: Cargo.toml
channel/src/: channel_states.rs  fs_prover_channel.rs  fs_verifier_channel.rs  lib.rs  pow.rs  test.rs  test_keccak_channel.rs  test_poseidon3_channel.rs  tests.rs
commitment_scheme/: Cargo.toml
commitment_scheme/src/: lib.rs  packaging_commitment_scheme.rs  packer_hasher.rs  table_prover.rs  table_utils.rs  table_verifier.rs
commitment_scheme/src/merkle/: hash.rs  merkle_commitment_scheme.rs  mod.rs
composition_polynomial/: Cargo.toml
composition_polynomial/src/: air.rs  composition_polynomial.rs  lib.rs  multiplicative_neighbors.rs  periodic_columns.rs
felt/: Cargo.toml
felt/src/: lib.rs
fft/: Cargo.toml
fft/src/: lib.rs
fri/: Cargo.toml
fri/src/: committed_layers.rs  details.rs  folder.rs  layer.rs  layers.rs  lde.rs  lib.rs  parameters.rs  prover.rs  stone_domain.rs  test.rs  verifier.rs
merkle/: Cargo.toml
merkle/src/: hash.rs  lib.rs
pedersen/: Cargo.toml
pedersen/src/: constants.rs  hash_context.rs  lib.rs  pedersen.rs  stark_curve.rs
poseidon/: Cargo.toml  README.md  build.rs
poseidon/benches/: poseidon.rs
poseidon/src/: constants.rs  lib.rs
randomness/: Cargo.toml
randomness/src/: hash_chain.rs  keccak256.rs  lib.rs  poseidon3.rs
src/: felt252.rs  lib.rs
src/channel/: annotation.rs  annotations.rs  channel_states.rs  channel_statistics.rs  fs_prover_channel.rs  fs_verifier_channel.rs  mod.rs  pow.rs  tests.rs  verifier_channel.rs
src/channel/tests/: fs_prover_channel_test.rs  fs_verifier_channel_test.rs  mod.rs
src/hashutil/: mod.rs
src/merkle/: mod.rs
src/randomness/: hash_chain.rs  mod.rs  prng.rs
util/: Cargo.toml
util/src/: lib.rs
util/src/poseidon/: consts.rs  mod.rs
