[workspace]
members = ["felt", "commitment_scheme", "poseidon", "randomness", "channel", "fri"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
ark-ff = { git = "https://github.com/jaehunkim/algebra", branch = "v0.4.2-fix" }
ark-poly = { git = "https://github.com/jaehunkim/algebra", branch = "v0.4.2-fix" }
sha3 = "0.10.8"
blake2 = "0.10.6"
hex-literal = "0.4.1"
num-bigint = "0.4.3"
paste = "1.0"
hex = "0.4"
rand = "0.8"