[workspace]
members = ["felt", "commitment_scheme", "poseidon", "randomness", "channel", "fri"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
sha3 = "0.10.8"
blake2 = "0.10.6"
hex-literal = "0.4.1"
num-bigint = "0.4.3"
serde_json = "1.0.122"
serde = "1.0.205"
paste = "1.0"
hex = "0.4"
rand = "0.8"
