[package]
name = "fri"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
felt = { path = "../felt" }
randomness = { path = "../randomness" }
channel = { path = "../channel" }
sha3.workspace = true
serde_json.workspace = true
serde.workspace = true
commitment_scheme = { path = "../commitment_scheme" }
anyhow.workspace = true
num-bigint.workspace = true

[dev-dependencies]
rand.workspace = true
